test_scores/negative_dimers/features/Q76N32.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q76N32.pkl.xz